<resources>
    <string name="app_name">ThingsHub</string>
    <string name="user_name">User Name</string>
    <string name="RecPos">Record Position Here</string>
    <string name="friendName">Friend Name</string>
    <string name="friends">Friends</string>
    <string name="addFriends">Add Friends</string>
    <string name="profile_page">Profile Page</string>
    <string name="signature">Signature</string>
    <string name="addthingtitle">TITLE</string>
    <string name="addthingfab">TODO</string>
    <string name="title">Title</string>
    <string name="FROM">TextView</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="startDate">Select StartDate Button</string>
    <string name="endDate">Select EndDate Button</string>
    <string name="string_enddate">Button</string>
    <string name="dec_16_2021">Dec 16 2021</string>
    <string name="dec_16_2022">Dec 16 2022</string>
    <string name="color">COLOR</string>
    <string name="thingstoday_title">ThingsToday TItle</string>
    <string name="buttontest">Button Test</string>
    <string name="add_thing_jump">Add Thing Jump</string>
    <string name="empty">empty</string>
    <string name="showTitle">Title</string>
    <string name="things">Things</string>
    <string name="hub">Hub</string>
    <string name="password">Password</string>
    <string name="LoginOrCreate">Login/Create</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
</resources>